--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Team - mINUs "
 title_separator          : "-"
-subtitle                 : "2024 inu-ese capstone design"# site tagline that appears below site title in masthead
+subtitle                 : "2024 inu-ese capstone design" # site tagline that appears below site title in masthead
 name                     : "Your Name"
 description              : "An amazing website."
 url                      : "https://mINUs-capstone-design.github.io"
@@ -104,10 +104,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "mINUs 개발 블로그"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "팀 mINUs의 개발일지 및 회의록 작성을 위한 블로그입니다."
+  location         : "인천대학교 정보기술대학 임베디드시스템공학과"
   email            :
   links:
     - label: "Email"
