--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "회의록"
-    url: /categories/
+    url: /meeting/
   - title: "github"
     url: https://github.com/mINUs-capstone-design/
   # - title: "About"
