--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "회의록"
     url: /meeting/
+  - title: "개발일지"
+    url: /develop/
   - title: "github"
     url: https://github.com/mINUs-capstone-design/
   # - title: "About"
