--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "회의록"
-    url: /meeting/
+    url: /meeting
   - title: "개발일지"
     url: /devlog/
   # - title: "About"
