--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,14 @@
 # main links
-main:
+sidebar-category:
   - title: "회의록"
     url: /meeting
   - title: "개발일지"
     url: /devlog
+#main:
+#  - title: "회의록"
+#    url: /meeting
+#  - title: "개발일지"
+#    url: /devlog
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
