--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ sidebar-category:
   - title: "개발일지"
     url: /devlog
   - title: "주간 다이어리"
-    url: /weekilyDiary
+    url: /weeklyDiary
 #main:
 #  - title: "회의록"
 #    url: /meeting
